DLL作成時のwarning C4251 へ対応（エクスポートするクラスにSTLを含まないように変更）
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/branches/20140204_vs2010_dll_sample@8 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/NetworkCameraUtility/NetworkCameraUtility/NetworkCameraUtility.vcxproj
+++ b/NetworkCameraUtility/NetworkCameraUtility/NetworkCameraUtility.vcxproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HttpClient.h" />
+    <ClInclude Include="HttpClientConcrete.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="string_utility.h" />
     <ClInclude Include="targetver.h" />
@@ -93,6 +94,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="HttpClient.cpp" />
+    <ClCompile Include="HttpClientConcrete.cpp" />
     <ClCompile Include="string_utility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
