--- a/NetworkCameraUtility/NetworkCameraUtility/NetworkCameraUtility.vcxproj.filters
+++ b/NetworkCameraUtility/NetworkCameraUtility/NetworkCameraUtility.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="HttpClientConcrete.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -42,6 +45,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="string_utility.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="HttpClientConcrete.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
