コンフィギュレーション、string型のデフォルト値の与え方を修正
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/trunk@36 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
+++ b/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
@@ -104,11 +104,11 @@
 # conf.__widget__.setupType, radio
 
 
-# conf.__constraints__.imageFormat, ("JPEG", "RAW")
-# conf.__constraints__.imageQuality, ("Motion", "Standard", "Clarity")
-# conf.__constraints__.imageSize, (w192", "w320", "w640", "w1280_43", "w1280_54")
-# conf.__constraints__.whiteBalance, ("auto", "indoor", "fluorescent_white", "fluorescent_day", "outdoor", "hold")
-# conf.__constraints__.setupType, ("ceiling", "desktop")
+# conf.__constraints__.imageFormat, (JPEG, RAW)
+# conf.__constraints__.imageQuality, (Motion, Standard, Clarity)
+# conf.__constraints__.imageSize, (w192, w320, w640, w1280_43, w1280_54)
+# conf.__constraints__.whiteBalance, (auto, indoor, fluorescent_white, fluorescent_day, outdoor, hold)
+# conf.__constraints__.setupType, (ceiling, desktop)
 
 ##============================================================
 ## Execution context settings
