画質、解像度のコンフィギュレーション設定内容を修正 （保存時に一部ファイルの文字コードも変更）
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/trunk@40 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
+++ b/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
@@ -98,17 +98,17 @@
 # conf.__widget__.user, text
 # conf.__widget__.password, text
 # conf.__widget__.imageFormat, radio
-# conf.__widget__.imageQuality, radio
+# conf.__widget__.imageQuality, slider.5
 # conf.__widget__.imageSize, radio
 # conf.__widget__.whiteBalance, radio
 # conf.__widget__.setupType, radio
 
 
-# conf.__constraints__.imageFormat, (JPEG, RAW)
-# conf.__constraints__.imageQuality, (Motion, Standard, Clarity)
-# conf.__constraints__.imageSize, (w192, w320, w640, w1280_43, w1280_54)
-# conf.__constraints__.whiteBalance, (auto, indoor, fluorescent_white, fluorescent_day, outdoor, hold)
-# conf.__constraints__.setupType, (ceiling, desktop)
+# conf.__constraints__.imageFormat, (JPEG,RAW)
+# conf.__constraints__.imageQuality, 1<=x<=10
+# conf.__constraints__.imageSize, (192x144,320x240,640x480,1280x960,1280x1024)
+# conf.__constraints__.whiteBalance, (auto,indoor,fluorescent_white,fluorescent_day,outdoor,hold)
+# conf.__constraints__.setupType, (ceiling,desktop)
 
 ##============================================================
 ## Execution context settings
