ネットワークアクセス部分を別クラスにして、明示的にタイムアウトを設定可能とした
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/trunk@44 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/NetworkCameraUtility/CMakeLists.txt
+++ b/NetworkCameraUtility/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TARGET_SORCES
   ${SRC}/string_utility.cpp
   ${SRC}/HttpClient.cpp
   ${SRC}/HttpClientConcrete.cpp
+  ${SRC}/TimeoutBlockingClient.cpp
 )
 
 # マクロ定義
