CMakeLists.txt を修正 （インクルードファイル追加に対応）
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/trunk@55 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/SonyRtComponent/include/SonyNetworkCameraRt/CMakeLists.txt
+++ b/SonyRtComponent/include/SonyNetworkCameraRt/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(hdrs SonyNetworkCameraRt.h SonyNetworkCamera.h
+set(hdrs SonyNetworkCameraRt.h SonyNetworkCamera.h IntBounds.h
     PARENT_SCOPE
     )
 
