共有ライブラリのプロジェクトのデフォルトのフォルダ名が異なっていたので修正
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/branches/UnitTest@69 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/network_camera_utility_test/StringUtilityUnitTest/CMakeLists.txt
+++ b/network_camera_utility_test/StringUtilityUnitTest/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required (VERSION 2.8)
 project(StringUtilityUnitTest)
 
 # テスト対象プロジェクトの場所
-set(NETWORK_CAMERA_TMP "${PROJECT_SOURCE_DIR}/../../network_camera_utility")
+set(NETWORK_CAMERA_TMP "${PROJECT_SOURCE_DIR}/../../NetworkCameraUtility")
 get_filename_component(NETWORK_CAMERA_DIR ${NETWORK_CAMERA_TMP} ABSOLUTE)
 
 # ソースファイル指定
