ユニットテストとテスト対象フォルダの位置関係見直しを反映
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/branches/UnitTest@79 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/NetworkCameraUtilityUnitTest/TimeoutBlockingClientUnitTest/CMakeLists.txt
+++ b/NetworkCameraUtilityUnitTest/TimeoutBlockingClientUnitTest/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required (VERSION 2.8)
 project(TimeoutBlockingClientUnitTest)
 
 # テスト対象プロジェクトの場所
-set(NETWORK_CAMERA_TMP "${PROJECT_SOURCE_DIR}/../../NetworkCameraUtility")
+set(NETWORK_CAMERA_TMP "${PROJECT_SOURCE_DIR}/../../../NetworkCamera/NetworkCameraUtility")
 get_filename_component(NETWORK_CAMERA_DIR ${NETWORK_CAMERA_TMP} ABSOLUTE)
 
 # ソースファイル指定
