Panasonic用RTコンポーネントに、解像度160x120を選択肢として追加
git-svn-id: https://tmp.openrtm.org/svn/NetworkCamera/trunk@95 a91e9ba9-be64-4e52-9a46-199903a01c2f

--- a/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
+++ b/PanasonicRtComponent/PanasonicNetworkCameraRt.conf
@@ -106,7 +106,7 @@
 
 # conf.__constraints__.imageFormat, (JPEG,RAW)
 # conf.__constraints__.imageQuality, 1<=x<=10
-# conf.__constraints__.imageSize, (192x144,320x240,640x480,1280x960,1280x1024)
+# conf.__constraints__.imageSize, (160x120,192x144,320x240,640x480,1280x960,1280x1024)
 # conf.__constraints__.whiteBalance, (auto,indoor,fluorescent_white,fluorescent_day,outdoor,hold)
 # conf.__constraints__.setupType, (ceiling,desktop)
 
