--- a/PanasonicRtComponent/src/CMakeLists.txt
+++ b/PanasonicRtComponent/src/CMakeLists.txt
@@ -26,15 +26,10 @@ endif (DEFINED OPENRTM_LIBRARIES)
 find_package(OpenCV REQUIRED)
  
 # add Boost
-# hints if library can't find
-set(BOOST_ROOT       "C:/Program Files (x86)/boost/boost_1_55_0/")
-set(BOOST_INCLUDEDIR "C:/Program Files (x86)/boost/boost_1_55_0/")
-set(BOOST_LIBRARYDIR "C:/Program Files (x86)/boost/boost_1_55_0/lib32-msvc-10.0")
-#
 # if no specific libraries, Boost_LIBRARY_DIRS is empty
 #find_package(Boost 1.55.0 REQUIRED)
 find_package(Boost 1.55.0 REQUIRED COMPONENTS regex)
-#
+
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
@@ -43,10 +38,14 @@ set(network_camera_tmp "${PROJECT_SOURCE_DIR}/../NetworkCameraUtility")
 get_filename_component(network_camera_dir ${network_camera_tmp} ABSOLUTE)
 #
 include_directories(${network_camera_dir}/include)
-link_directories(${network_camera_dir}/build)
-#
-set(network_camera_utility_libs "NetworkCameraUtility.lib")
 
+#
+set(camera_lib_dir ${network_camera_dir}/build)
+
+# find_library command can get absolute path to specified library name.
+# but some library paths in VisualStudio include a configuration name, like "Release" or "Debug".
+# So there are library directory and library name for VisualStudio.
+set(CAMERA_UTIL_LIB "NetworkCameraUtility.lib")
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
@@ -61,18 +60,21 @@ MAP_ADD_STR(comp_hdrs "../" comp_headers)
 
 link_directories(${OPENRTM_LIBRARY_DIRS})
 link_directories(${OMNIORB_LIBRARY_DIRS})
+link_directories(${camera_lib_dir})
 
 add_library(${PROJECT_NAME} ${LIB_TYPE} ${comp_srcs}
   ${comp_headers} ${ALL_IDL_SRCS})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
 set_source_files_properties(${ALL_IDL_SRCS} PROPERTIES GENERATED 1)
 add_dependencies(${PROJECT_NAME} ALL_IDL_TGT)
-target_link_libraries(${PROJECT_NAME} ${OPENRTM_LIBRARIES} ${OpenCV_LIBS} ${network_camera_utility_libs})
+target_link_libraries(${PROJECT_NAME} ${OPENRTM_LIBRARIES} ${OpenCV_LIBS} 
+          ${CAMERA_UTIL_LIB} ${Boost_LIBRARIES})
 
 add_executable(${PROJECT_NAME}Comp ${standalone_srcs}
   ${comp_srcs} ${comp_headers} ${ALL_IDL_SRCS})
-target_link_libraries(${PROJECT_NAME}Comp ${OPENRTM_LIBRARIES}  ${OpenCV_LIBS} ${network_camera_utility_libs})
-
+target_link_libraries(${PROJECT_NAME}Comp ${OPENRTM_LIBRARIES}  ${OpenCV_LIBS} 
+          ${CAMERA_UTIL_LIB} ${Boost_LIBRARIES})
+          
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Comp
     EXPORT ${PROJECT_NAME}
     RUNTIME DESTINATION ${BIN_INSTALL_DIR} COMPONENT component
@@ -81,3 +83,4 @@ install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Comp
 install(EXPORT ${PROJECT_NAME}
     DESTINATION ${LIB_INSTALL_DIR}/${PROJECT_NAME}
     FILE ${PROJECT_NAME}Depends.cmake)
+
